[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Caspar Nettelbladt <caspar.n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websocket-client = "^1.8.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = "."
venv = ".venv"
