[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Caspar Nettelbladt <caspar.n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
gql = {extras = ["all"], version = "^3.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath = "."
venv = ".venv"
